# project_euler

./: .ccls  .gitignore  .gitmodules  CMakeLists.txt  pyproject.toml
problems/1/: main.cpp
problems/10/: main.cpp
problems/11/: main.cpp
problems/12/: main.cpp
problems/13/: main.cpp
problems/14/: main.py
problems/15/: main.py
problems/16/: main.py
problems/17/: main.cpp
problems/18/: main.cpp
problems/19/: main.cpp
problems/2/: main.cpp
problems/20/: main.py
problems/21/: main.cpp
problems/22/: main.cpp
problems/23/: main.cpp
problems/24/: main.cpp
problems/25/: main.py
problems/27/: main.cpp
problems/28/: main.c
problems/3/: main.cpp
problems/36/: main.cpp
problems/4/: main.cpp
problems/45/: main.cpp
problems/5/: main.cpp
problems/52/: main.cpp
problems/6/: main.cpp
problems/63/: main.cpp
problems/67/: main.cpp
problems/7/: main.cpp
problems/8/: main.cpp
problems/87/: main.cpp
problems/9/: main.cpp
tests/: PrimesUnitTests.cpp
utils/numbers/: primes.cpp  primes.hpp
