cmake_minimum_required(VERSION 3.17)

project(advent_of_code)
set(CMAKE_CXX_STANDARD 17)

message(STATUS "Build type: ${CMAKE_BUILD_TYPE}")
set(CMAKE_CXX_FLAGS "-Wall -Wextra")
set(CMAKE_CXX_FLAGS_DEBUG "-g -O0 -DDEBUG")
set(CMAKE_CXX_FLAGS_RELEASE "-O3")

add_library(primes utils/numbers/primes.cpp)

find_package(GTest)
if (GTEST_FOUND)
  enable_testing()
  include_directories(${GTEST_INCLUDE_DIRS})

  add_executable(PrimesUnitTests tests/PrimesUnitTests.cpp)
  target_link_libraries(PrimesUnitTests ${GTEST_BOTH_LIBRARIES} pthread primes)
  GTEST_DISCOVER_TESTS(PrimesUnitTests)
endif()

add_executable(problem_1 problems/1/main.cpp)
add_executable(problem_2 problems/2/main.cpp)
add_executable(problem_3 problems/3/main.cpp)
target_link_libraries(problem_3 primes)
add_executable(problem_4 problems/4/main.cpp)
add_executable(problem_5 problems/5/main.cpp)
add_executable(problem_6 problems/6/main.cpp)
add_executable(problem_7 problems/7/main.cpp)
target_link_libraries(problem_7 primes)
add_executable(problem_8 problems/8/main.cpp)
add_executable(problem_9 problems/9/main.cpp)
add_executable(problem_10 problems/10/main.cpp)
target_link_libraries(problem_10 primes)
add_executable(problem_11 problems/11/main.cpp)
add_executable(problem_12 problems/12/main.cpp)
add_executable(problem_13 problems/13/main.cpp)
add_executable(problem_17 problems/17/main.cpp)
add_executable(problem_18 problems/18/main.cpp)
add_executable(problem_19 problems/19/main.cpp)
# problem 20: Python
add_executable(problem_21 problems/21/main.cpp)
target_link_libraries(problem_21 primes)
add_executable(problem_22 problems/22/main.cpp)
add_executable(problem_23 problems/23/main.cpp)
target_link_libraries(problem_23 primes)
add_executable(problem_24 problems/24/main.cpp)
# problem 25: Python
# add_executable(problem_26 problems/26/main.cpp)
add_executable(problem_27 problems/27/main.cpp)
target_link_libraries(problem_27 primes)
add_executable(problem_36 problems/36/main.cpp)
add_executable(problem_45 problems/45/main.cpp)
add_executable(problem_52 problems/52/main.cpp)
add_executable(problem_63 problems/63/main.cpp)
add_executable(problem_67 problems/67/main.cpp)
add_executable(problem_87 problems/87/main.cpp)
target_link_libraries(problem_87 primes)

